// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can replace a color value 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: var(--color-D4D4D4); }
.default-dark .mtk2 { color: var(--color-1E1E1E); }
.default-dark .mtk3 { color: var(--color-6A9955); }
.default-dark .mtk4 { color: var(--color-569CD6); }
.default-dark .mtk5 { color: var(--color-D16969); }
.default-dark .mtk6 { color: var(--color-D7BA7D); }
.default-dark .mtk7 { color: var(--color-B5CEA8); }
.default-dark .mtk8 { color: var(--color-CE9178); }
.default-dark .mtk9 { color: var(--color-646695); }
.default-dark .mtk10 { color: var(--color-4EC9B0); }
.default-dark .mtk11 { color: var(--color-DCDCAA); }
.default-dark .mtk12 { color: var(--color-9CDCFE); }
.default-dark .mtk13 { color: var(--color-000080); }
.default-dark .mtk14 { color: var(--color-F44747); }
.default-dark .mtk15 { color: var(--color-C586C0); }
.default-dark .mtk16 { color: var(--color-6796E6); }
.default-dark .mtk17 { color: var(--color-808080); }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`extension downloading can download an extension to resolve a grammar 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "custom",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"custom\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk1\\">const x = 3;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk1\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`extension downloading can download an extension to resolve a theme 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"custom-theme vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> x </span><span class=\\"mtk11\\">=</span><span class=\\"mtk1\\"> </span><span class=\\"mtk5\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.custom-theme {

}

.custom-theme .mtk1 { color: #000000; }
.custom-theme .mtk2 { color: #FFFFFF; }
.custom-theme .mtk3 { color: #6A9955; }
.custom-theme .mtk4 { color: #569CD6; }
.custom-theme .mtk5 { color: #B5CEA8; }
.custom-theme .mtk6 { color: #646695; }
.custom-theme .mtk7 { color: #D7BA7D; }
.custom-theme .mtk8 { color: #9CDCFE; }
.custom-theme .mtk9 { color: #000080; }
.custom-theme .mtk10 { color: #F44747; }
.custom-theme .mtk11 { color: #D4D4D4; }
.custom-theme .mtk12 { color: #CE9178; }
.custom-theme .mtk13 { color: #6796E6; }
.custom-theme .mtk14 { color: #808080; }
.custom-theme .mtk15 { color: #D16969; }
.custom-theme .mtki { font-style: italic; }
.custom-theme .mtkb { font-weight: bold; }
.custom-theme .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes can use a custom language alias 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "java-scripty",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"java-scripty\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes can use a standard language alias 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "JavaScript",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"javascript\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes partially works if an embedded grammar is missing 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "embedded",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"embedded\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\">const x = 3;</span>
<span class=\\"vscode-highlight-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works with default options 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works without highlighting if a code fence has no language 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\">const x = 3;</span>
<span class=\\"vscode-highlight-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works without highlighting if language is not recognized 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "none",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"none\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\">const x = 3;</span>
<span class=\\"vscode-highlight-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}</style>",
    },
  ],
  "type": "root",
}
`;

exports[`prefers-color-scheme supports prefers-color-scheme via an object for \`colorTheme\` 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"solarized-light pd--monokai-dimmed pl--quiet-light vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk7\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk7\\">x</span><span class=\\"mtk1\\"> </span><span class=\\"mtk6\\">=</span><span class=\\"mtk1\\"> </span><span class=\\"mtk5\\">3</span><span class=\\"mtk6\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3 mtki\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.solarized-light {
background-color: #FDF6E3;
}

.solarized-light .mtk1 { color: #657B83; }
.solarized-light .mtk2 { color: #FDF6E3; }
.solarized-light .mtk3 { color: #93A1A1; }
.solarized-light .mtk4 { color: #CB4B16; }
.solarized-light .mtk5 { color: #B58900; }
.solarized-light .mtk6 { color: #D33682; }
.solarized-light .mtk7 { color: #268BD2; }
.solarized-light .mtk8 { color: #859900; }
.solarized-light .mtk9 { color: #D30102; }
.solarized-light .mtk10 { color: #EEE8D5; }
.solarized-light .mtk11 { color: #DC322F; }
.solarized-light .mtk12 { color: #2AA198; }
.solarized-light .mtk13 { color: #219186; }
.solarized-light .mtk14 { color: #E0EDDD; }
.solarized-light .mtk15 { color: #073642; }
.solarized-light .mtki { font-style: italic; }
.solarized-light .mtkb { font-weight: bold; }
.solarized-light .mtku { text-decoration: underline; text-underline-position: under; }
@media (prefers-color-scheme: dark) {
.pd--monokai-dimmed {
background-color: #1e1e1e;
color: #c5c8c6;
}

.pd--monokai-dimmed .mtk1 { color: #C5C8C6FF; }
.pd--monokai-dimmed .mtk2 { color: #202025FF; }
.pd--monokai-dimmed .mtk3 { color: #6089B4; }
.pd--monokai-dimmed .mtk4 { color: #9A9B99; }
.pd--monokai-dimmed .mtk5 { color: #8080FF; }
.pd--monokai-dimmed .mtk6 { color: #1E1E1E; }
.pd--monokai-dimmed .mtk7 { color: #408080; }
.pd--monokai-dimmed .mtk8 { color: #9AA83A; }
.pd--monokai-dimmed .mtk9 { color: #9B0000; }
.pd--monokai-dimmed .mtk10 { color: #CE6700; }
.pd--monokai-dimmed .mtk11 { color: #9872A2; }
.pd--monokai-dimmed .mtk12 { color: #D0B344; }
.pd--monokai-dimmed .mtk13 { color: #C7444A; }
.pd--monokai-dimmed .mtk14 { color: #FF0B00; }
.pd--monokai-dimmed .mtk15 { color: #676867; }
.pd--monokai-dimmed .mtk16 { color: #D9B700; }
.pd--monokai-dimmed .mtk17 { color: #CB4B16; }
.pd--monokai-dimmed .mtk18 { color: #EEE8D5; }
.pd--monokai-dimmed .mtk19 { color: #DC322F; }
.pd--monokai-dimmed .mtk20 { color: #FF0080; }
.pd--monokai-dimmed .mtk21 { color: #219186; }
.pd--monokai-dimmed .mtk22 { color: #008200; }
.pd--monokai-dimmed .mtk23 { color: #E0EDDD; }
.pd--monokai-dimmed .mtk24 { color: #B58900; }
.pd--monokai-dimmed .mtk25 { color: #C5C8C6; }
.pd--monokai-dimmed .mtk26 { color: #D08442; }
.pd--monokai-dimmed .mtk27 { color: #B267E6; }
.pd--monokai-dimmed .mtk28 { color: #F44747; }
.pd--monokai-dimmed .mtk29 { color: #6796E6; }
.pd--monokai-dimmed .mtk30 { color: #CD9731; }
.pd--monokai-dimmed .mtk31 { color: #CC555A; }
.pd--monokai-dimmed .mtki { font-style: italic; }
.pd--monokai-dimmed .mtkb { font-weight: bold; }
.pd--monokai-dimmed .mtku { text-decoration: underline; text-underline-position: under; }
}
@media (prefers-color-scheme: light) {
.pl--quiet-light {
background-color: #F5F5F5;
}

.pl--quiet-light .mtk1 { color: #333333; }
.pl--quiet-light .mtk2 { color: #F5F5F5; }
.pl--quiet-light .mtk3 { color: #AAAAAA; }
.pl--quiet-light .mtk4 { color: #448C27; }
.pl--quiet-light .mtk5 { color: #9C5D27; }
.pl--quiet-light .mtk6 { color: #777777; }
.pl--quiet-light .mtk7 { color: #7A3E9D; }
.pl--quiet-light .mtk8 { color: #660000; }
.pl--quiet-light .mtk9 { color: #AA3731; }
.pl--quiet-light .mtk10 { color: #4B69C6; }
.pl--quiet-light .mtk11 { color: #8190A0; }
.pl--quiet-light .mtk12 { color: #96000014; }
.pl--quiet-light .mtk13 { color: #000000; }
.pl--quiet-light .mtk14 { color: #FFFFDD; }
.pl--quiet-light .mtk15 { color: #FFDDDD; }
.pl--quiet-light .mtk16 { color: #DDFFDD; }
.pl--quiet-light .mtk17 { color: #434343; }
.pl--quiet-light .mtk18 { color: #DDDDFF; }
.pl--quiet-light .mtk19 { color: #333333FF; }
.pl--quiet-light .mtk20 { color: #91B3E0; }
.pl--quiet-light .mtk21 { color: #EAEBE6; }
.pl--quiet-light .mtki { font-style: italic; }
.pl--quiet-light .mtkb { font-weight: bold; }
.pl--quiet-light .mtku { text-decoration: underline; text-underline-position: under; }
}</style>",
    },
  ],
  "type": "root",
}
`;

exports[`prefers-color-scheme supports prefers-color-scheme with dynamically selected themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"solarized-light pd--dark-default-dark pl--quiet-light vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk7\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk7\\">x</span><span class=\\"mtk1\\"> </span><span class=\\"mtk6\\">=</span><span class=\\"mtk1\\"> </span><span class=\\"mtk5\\">3</span><span class=\\"mtk6\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3 mtki\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"solarized-light pd--monokai pl--quiet-light vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line\\"><span class=\\"mtk7\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk7\\">x</span><span class=\\"mtk1\\"> </span><span class=\\"mtk6\\">=</span><span class=\\"mtk1\\"> </span><span class=\\"mtk5\\">3</span><span class=\\"mtk6\\">;</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3 mtki\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.solarized-light {
background-color: #FDF6E3;
}

.solarized-light .mtk1 { color: #657B83; }
.solarized-light .mtk2 { color: #FDF6E3; }
.solarized-light .mtk3 { color: #93A1A1; }
.solarized-light .mtk4 { color: #CB4B16; }
.solarized-light .mtk5 { color: #B58900; }
.solarized-light .mtk6 { color: #D33682; }
.solarized-light .mtk7 { color: #268BD2; }
.solarized-light .mtk8 { color: #859900; }
.solarized-light .mtk9 { color: #D30102; }
.solarized-light .mtk10 { color: #EEE8D5; }
.solarized-light .mtk11 { color: #DC322F; }
.solarized-light .mtk12 { color: #2AA198; }
.solarized-light .mtk13 { color: #219186; }
.solarized-light .mtk14 { color: #E0EDDD; }
.solarized-light .mtk15 { color: #073642; }
.solarized-light .mtki { font-style: italic; }
.solarized-light .mtkb { font-weight: bold; }
.solarized-light .mtku { text-decoration: underline; text-underline-position: under; }
@media (prefers-color-scheme: dark) {
.pd--dark-default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.pd--dark-default-dark .mtk1 { color: #D4D4D4; }
.pd--dark-default-dark .mtk2 { color: #1E1E1E; }
.pd--dark-default-dark .mtk3 { color: #6A9955; }
.pd--dark-default-dark .mtk4 { color: #569CD6; }
.pd--dark-default-dark .mtk5 { color: #D16969; }
.pd--dark-default-dark .mtk6 { color: #D7BA7D; }
.pd--dark-default-dark .mtk7 { color: #B5CEA8; }
.pd--dark-default-dark .mtk8 { color: #CE9178; }
.pd--dark-default-dark .mtk9 { color: #646695; }
.pd--dark-default-dark .mtk10 { color: #4EC9B0; }
.pd--dark-default-dark .mtk11 { color: #DCDCAA; }
.pd--dark-default-dark .mtk12 { color: #9CDCFE; }
.pd--dark-default-dark .mtk13 { color: #000080; }
.pd--dark-default-dark .mtk14 { color: #F44747; }
.pd--dark-default-dark .mtk15 { color: #C586C0; }
.pd--dark-default-dark .mtk16 { color: #6796E6; }
.pd--dark-default-dark .mtk17 { color: #808080; }
.pd--dark-default-dark .mtki { font-style: italic; }
.pd--dark-default-dark .mtkb { font-weight: bold; }
.pd--dark-default-dark .mtku { text-decoration: underline; text-underline-position: under; }
}
@media (prefers-color-scheme: light) {
.pl--quiet-light {
background-color: #F5F5F5;
}

.pl--quiet-light .mtk1 { color: #333333; }
.pl--quiet-light .mtk2 { color: #F5F5F5; }
.pl--quiet-light .mtk3 { color: #AAAAAA; }
.pl--quiet-light .mtk4 { color: #448C27; }
.pl--quiet-light .mtk5 { color: #9C5D27; }
.pl--quiet-light .mtk6 { color: #777777; }
.pl--quiet-light .mtk7 { color: #7A3E9D; }
.pl--quiet-light .mtk8 { color: #660000; }
.pl--quiet-light .mtk9 { color: #AA3731; }
.pl--quiet-light .mtk10 { color: #4B69C6; }
.pl--quiet-light .mtk11 { color: #8190A0; }
.pl--quiet-light .mtk12 { color: #96000014; }
.pl--quiet-light .mtk13 { color: #000000; }
.pl--quiet-light .mtk14 { color: #FFFFDD; }
.pl--quiet-light .mtk15 { color: #FFDDDD; }
.pl--quiet-light .mtk16 { color: #DDFFDD; }
.pl--quiet-light .mtk17 { color: #434343; }
.pl--quiet-light .mtk18 { color: #DDDDFF; }
.pl--quiet-light .mtk19 { color: #333333FF; }
.pl--quiet-light .mtk20 { color: #91B3E0; }
.pl--quiet-light .mtk21 { color: #EAEBE6; }
.pl--quiet-light .mtki { font-style: italic; }
.pl--quiet-light .mtkb { font-weight: bold; }
.pl--quiet-light .mtku { text-decoration: underline; text-underline-position: under; }
}
@media (prefers-color-scheme: dark) {
.pd--monokai {
background-color: #272822;
color: #f8f8f2;
}

.pd--monokai .mtk1 { color: #F8F8F2; }
.pd--monokai .mtk2 { color: #272822; }
.pd--monokai .mtk3 { color: #75715E; }
.pd--monokai .mtk4 { color: #AE81FF; }
.pd--monokai .mtk5 { color: #A6E22E; }
.pd--monokai .mtk6 { color: #E6DB74; }
.pd--monokai .mtk7 { color: #F92672; }
.pd--monokai .mtk8 { color: #F8F8F0; }
.pd--monokai .mtk9 { color: #66D9EF; }
.pd--monokai .mtk10 { color: #FD971F; }
.pd--monokai .mtk11 { color: #AE81FFA0; }
.pd--monokai .mtk12 { color: #CFCFC2; }
.pd--monokai .mtk13 { color: #B267E6; }
.pd--monokai .mtk14 { color: #F44747; }
.pd--monokai .mtk15 { color: #6796E6; }
.pd--monokai .mtk16 { color: #CD9731; }
.pd--monokai .mtki { font-style: italic; }
.pd--monokai .mtkb { font-weight: bold; }
.pd--monokai .mtku { text-decoration: underline; text-underline-position: under; }
}</style>",
    },
  ],
  "type": "root",
}
`;

exports[`sets highlighted line class names 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js{1,3-4}",
      "type": "html",
      "value": "<pre class=\\"default-dark vscode-highlight\\" data-language=\\"js\\"><code class=\\"vscode-highlight-code\\"><span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 1</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// 2</span></span>
<span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 3</span></span>
<span class=\\"vscode-highlight-line vscode-highlight-line-highlighted\\"><span class=\\"mtk3\\">// 4</span></span>
<span class=\\"vscode-highlight-line\\"><span class=\\"mtk3\\">// 5</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"vscode-highlight-styles\\">.default-dark {
background-color: #1E1E1E;
color: #D4D4D4;
}

.default-dark .mtk1 { color: #D4D4D4; }
.default-dark .mtk2 { color: #1E1E1E; }
.default-dark .mtk3 { color: #6A9955; }
.default-dark .mtk4 { color: #569CD6; }
.default-dark .mtk5 { color: #D16969; }
.default-dark .mtk6 { color: #D7BA7D; }
.default-dark .mtk7 { color: #B5CEA8; }
.default-dark .mtk8 { color: #CE9178; }
.default-dark .mtk9 { color: #646695; }
.default-dark .mtk10 { color: #4EC9B0; }
.default-dark .mtk11 { color: #DCDCAA; }
.default-dark .mtk12 { color: #9CDCFE; }
.default-dark .mtk13 { color: #000080; }
.default-dark .mtk14 { color: #F44747; }
.default-dark .mtk15 { color: #C586C0; }
.default-dark .mtk16 { color: #6796E6; }
.default-dark .mtk17 { color: #808080; }
.default-dark .mtki { font-style: italic; }
.default-dark .mtkb { font-weight: bold; }
.default-dark .mtku { text-decoration: underline; text-underline-position: under; }</style>",
    },
  ],
  "type": "root",
}
`;
